fixed spacing problem in glosses html output
svn/trunk@5459

--- a/nltkdoc.css
+++ b/nltkdoc.css
@@ -178,6 +178,7 @@ table.gloss { border: 0px solid black; width: 0; }
 table.gloss tbody tr { border: 0px solid black; }
 table.gloss tbody tr td { border: 0px solid black; }
 table.gloss colgroup col { border: 0px solid black; }
+table.gloss p { margin: 0; padding: 0; }
 
 table.rst-example { border: 1px solid black; }
 table.rst-example tbody tr td { background: #eeeeee; }
